callcenter-helm-chart/linhaverde-staging-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lv-kubernetes-staging-service
  annotations:
    # Note that the backend talks over HTTP.
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    # TODO: Fill in with the ARN of your certificate.
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:319863724664:certificate/25542147-29bf-49f8-8e3c-5e87d1af45fb
    # Only run SSL on the port named "https" below.
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/ht"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "30"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "10"
spec:
  selector:
    release: lv-staging-chart
  ports:
  - name: http
    port: 80
    targetPort: 8000
  - name: https
    port: 443
    targetPort: 8000
  type: LoadBalancer
