callcenter-helm-chart/postgres-haproxy-service-with-lb.yaml

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: postgres-forward-pod
  name: postgres-forward-pod
spec:
  containers:
    - command:
      - haproxy
      - -f
      - /usr/local/etc/haproxy/haproxy.cfg
      - -V
      image: haproxy:1.7-alpine
      name: postgres-forward-pod
      resources: {}
      volumeMounts:
        - mountPath: /usr/local/etc/haproxy/
          name: postgres-haproxy-port-forward
      ports:
        - containerPort: 5432
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: postgres-haproxy-port-forward
      configMap:
        name: postgres-haproxy-port-forward
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-forward-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ports:
    - name: tcp-port
      port: 31432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
  selector:
    run: postgres-forward-pod

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-tcp-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    run: postgres-forward-pod
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
