callcenter-helm-chart/linhaverde-kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lv-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - backend.lv-staging.robobo.org
    - backend.linha1458.moz.wfp.org	
    - dev.linha1458.moz.wfp.org	
    secretName: linhaverde-staging-tls-secret
  rules:
    - host: backend.lv-staging.robobo.org
      http:
        paths:
          - backend:
              serviceName: lv-chart
              servicePort: 80
            path: /
    - host: backend.linha1458.moz.wfp.org	
      http:
          paths:
            - backend:
                serviceName: lv-chart
                servicePort: 80
              path: /
    - host: dev.linha1458.moz.wfp.org	
      http:
          paths:
            - backend:
                serviceName: lv-staging-chart-lv-chart
                servicePort: 80
              path: /
